--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -26,6 +26,9 @@ h2 {
   display: block;
   text-align: center;
 }
+.social-media-link:hover {
+  color: red;
+}
 .topnav {
   font-size: 2vw;
   overflow: hidden;
